tests/NormalTests/paczka1/fuzzy1/21856740.err
Error in line 1: 5u1rCm A989 72,0
Error in line 6: p0xN7h A989 45,9
Error in line 19: S56OoS0n A989 21,2
Error in line 23: Nxv7 S602 47,4
Error in line 26: Nxv7 A237 61,7
